--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "npm": ">=1.0.20"
   },
   "analyze": true,
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "chai": "3.3.0",
     "del": "2.0.2",
     "gulp": "3.9.0",
+    "gulp-concat": "2.6.0",
     "gulp-if": "2.0.0",
     "gulp-load-plugins": "0.10.0",
     "gulp-minify-css": "1.2.1",
@@ -53,8 +54,6 @@
     "pipeline-validate-js": "git+ssh://git@github.com/kenzanmedia/pipeline-validate-js.git#55c0ec3a51799e83d4748ffbb700687fb818b8f5"
   },
   "devDependencies": {
-    "del": "2.0.2",
-    "gulp-concat": "2.6.0",
     "isstream": "0.1.2",
     "path": "0.12.7",
     "stream-assert": "2.0.3"
