--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-util": "3.0.6",
     "lazypipe": "1.0.1",
-    "pipeline-handyman": "git+ssh://git@github.com/kenzanmedia/pipeline-handyman.git#aeb41b4423ca07d5bab17ce28e6bdfb1b4e7b364",
-    "pipeline-validate-js": "git+ssh://git@github.com/kenzanmedia/pipeline-validate-js.git#55c0ec3a51799e83d4748ffbb700687fb818b8f5"
+    "pipeline-handyman": "git+ssh://git@github.com/kenzanmedia/pipeline-handyman.git#0.1.0",
+    "pipeline-validate-js": "git+ssh://git@github.com/kenzanmedia/pipeline-validate-js.git#0.1.0"
   },
   "devDependencies": {
     "isstream": "0.1.2",
