--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com:kenzanmedia/pipeline-minify-css.git"
+    "url": "https://github.com/kenzanlabs/pipeline-minify-css"
   },
   "keywords": [
     "Gulp",
     "Tools",
     "Keystone",
     "Pipeline",
+    "Concat",
+    "Minification",
     "CSS"
   ],
   "preferGlobal": false,
@@ -45,15 +47,15 @@
     "gulp-minify-css": "1.2.1",
     "gulp-sourcemaps": "1.6.0",
     "lazypipe": "1.0.1",
-    "pipeline-handyman": "git+ssh://git@github.com/kenzanmedia/pipeline-handyman.git#0.1.1"
+    "pipeline-handyman": "git+ssh://git@github.com/kenzanlabs/pipeline-handyman.git#0.2.0"
   },
   "devDependencies": {
     "chai": "3.3.0",
     "del": "2.0.2",
     "gulp": "3.9.0",
     "path": "0.12.7",
-    "pipeline-test-node": "git+ssh://git@github.com/kenzanmedia/pipeline-test-node.git#0.2.0",
-    "pipeline-validate-js": "git+ssh://git@github.com/kenzanmedia/pipeline-validate-js.git#0.1.0",
+    "pipeline-test-node": "git+ssh://git@github.com/kenzanlabs/pipeline-test-node.git#0.3.0",
+    "pipeline-validate-js": "git+ssh://git@github.com/kenzanlabs/pipeline-validate-js.git#0.2.0",
     "stream-assert": "2.0.3"
   }
 }
