--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "gulp-minify-css": "1.2.1",
     "gulp-sourcemaps": "1.6.0",
     "lazypipe": "1.0.1",
-    "pipeline-handyman": "git+ssh://git@github.com/kenzanlabs/pipeline-handyman.git#0.2.0"
+    "pipeline-handyman": "0.3.0"
   },
   "devDependencies": {
     "chai": "3.3.0",
     "del": "2.0.2",
     "gulp": "3.9.0",
     "path": "0.12.7",
-    "pipeline-test-node": "git+ssh://git@github.com/kenzanlabs/pipeline-test-node.git#0.3.0",
-    "pipeline-validate-js": "git+ssh://git@github.com/kenzanlabs/pipeline-validate-js.git#0.2.0",
+    "pipeline-test-node": "0.4.0",
+    "pipeline-validate-js": "0.3.0",
     "stream-assert": "2.0.3"
   }
 }
