--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-concat": "2.6.0",
     "gulp-if": "2.0.0",
     "gulp-minify-css": "1.2.1",
+    "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
     "lazypipe": "1.0.1",
     "pipeline-handyman": "0.3.0"
